# perplexity-mcp

./: Cargo.toml  README.md  plan.md
.github/workflows/: deploy.yml
crates/perplexity_mcp_tools/: Cargo.toml
crates/perplexity_mcp_tools/src/: lib.rs  perplexity_mcp_tools.rs
crates/similarity_cache/: Cargo.toml
crates/similarity_cache/src/: similarity_cache.rs
crates/usage_reporter/: Cargo.toml
crates/usage_reporter/src/: usage_reporter.rs
scripts/: install.sh
src/: main.rs
