[package]
name = "perplexity-mcp"
version = "0.1.1"
edition = "2024"

[dependencies]
anyhow = "1"
async-trait = "0.1.83"
context-server = { git = "https://github.com/fdionisi/context-server", version = "0.8.2" }
http-client = { git = "https://github.com/fdionisi/http-client", version = "0.2.0" }
http-client-reqwest = { git = "https://github.com/fdionisi/http-client", version = "0.2.0" }
indoc = "2.0.5"
parking_lot = "0.12.3"
serde_json = "1"
tokio = { version = "1.42", features = ["full"] }
