[package]
name = "perplexity-mcp"
version = "0.2.1"
edition = "2024"

[dependencies]
anyhow.workspace = true
context-server.workspace = true
context-server-utils = { git = "https://github.com/fdionisi/context-server", version = "0.1" }
http-client.workspace = true
http-client-reqwest.workspace = true
serde_json.workspace = true
tokio = { version = "1.42", features = ["full"] }
perplexity_mcp_tools = { path = "crates/perplexity_mcp_tools" }

[workspace]
resolver = "3"
members = ["crates/perplexity_mcp_tools"]

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1.83"
context-server = { git = "https://github.com/fdionisi/context-server", version = "0.8.3" }
http-client = { git = "https://github.com/fdionisi/http-client", version = "0.4.0" }
http-client-reqwest = { git = "https://github.com/fdionisi/http-client", version = "0.3.0" }
indoc = "2.0.5"
log = "0.4"
serde_json = "1"
